#
# Copyright (C) 2019 SWC-DB (author: Kashirin Alex (kashirin.alex@gmail.com))
#

add_subdirectory(core)         #ifndef swc_core_common_FileName_h

add_subdirectory(db)          #ifndef swc_db_common_FileName_h
add_subdirectory(client)      #ifndef swc_client_FileName_h
#add_subdirectory(fs)          #ifndef swc_fs_FileName_h

add_subdirectory(rangeserver) #ifndef swc_rs_FileName_h
#add_subdirectory(manager)     #ifndef swc_mngr_FileName_h
#add_subdirectory(thrift)      #ifndef swc_thrift_FileName_h




